Update to lucene 8.8.2
Finally building and tests are passing.
Still need to figure out how to replace the MultiFileds.getFields calls
in the tests, but need some deeper understanding of lucene for that.