@@ -1,22 +1,24 @@
 package org.jabref.logic.pdf.search.indexing;
 
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Collections;
 import java.util.List;
 
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.LinkedFile;
+import org.jabref.model.entry.types.StandardEntryType;
 import org.jabref.model.pdf.search.SearchFieldConstants;
 
 import org.apache.lucene.document.Document;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
-import static junit.framework.TestCase.assertFalse;
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -24,10 +26,10 @@ public class DocumentReaderTest {
 
     private BibDatabaseContext databaseContext;
 
-    @Before
+    @BeforeEach
     public void setup() {
         this.databaseContext = mock(BibDatabaseContext.class);
-        when(databaseContext.getFileDirectoriesAsPaths(Mockito.any())).thenReturn(Collections.singletonList(Paths.get("src/test/resources/pdfs")));
+        when(databaseContext.getFileDirectories(Mockito.any())).thenReturn(Collections.singletonList(Path.of("src/test/resources/pdfs")));
     }
 
     @Test
@@ -43,21 +45,17 @@ public class DocumentReaderTest {
         assertEquals(Collections.emptyList(), emptyDocumentList);
     }
 
-    @Test(expected = IllegalStateException.class)
+    @Test
     public void noLinkedFiles() throws IOException {
-        // given
         BibEntry entry = new BibEntry();
-
-        // when
-        new DocumentReader(entry);
+        assertThrows(IllegalStateException.class, () -> new DocumentReader(entry));
     }
-
 
     @Test
     public void exampleTest() throws IOException {
         // given
-        BibEntry entry = new BibEntry("article");
-        entry.setCiteKey("Example2017");
+        BibEntry entry = new BibEntry(StandardEntryType.Article);
+        entry.setCitationKey("Example2017");
         entry.setFiles(Collections.singletonList(new LinkedFile("Example", "example.pdf", "pdf")));
         // when
         List<Document> documents = new DocumentReader(entry).readLinkedPdfs(databaseContext);
@@ -73,14 +71,14 @@ public class DocumentReaderTest {
     @Test
     public void thesisExampleTest() throws IOException {
         // given
-        BibEntry entry = new BibEntry("PHDThesis");
-        entry.setCiteKey("ThesisExample2017");
+        BibEntry entry = new BibEntry(StandardEntryType.PhdThesis);
+        entry.setCitationKey("ThesisExample2017");
         entry.setFiles(Collections.singletonList(new LinkedFile("Example thesis", "thesis-example.pdf", "pdf")));
 
         // when
         List<Document> documents = new DocumentReader(entry).readLinkedPdfs(databaseContext);
 
-        //then
+        // then
         assertEquals(1, documents.size());
 
         Document doc = documents.get(0);
@@ -91,8 +89,8 @@ public class DocumentReaderTest {
     @Test
     public void minimalTest() throws IOException {
         // given
-        BibEntry entry = new BibEntry("article");
-        entry.setCiteKey("Minimal2017");
+        BibEntry entry = new BibEntry(StandardEntryType.Article);
+        entry.setCitationKey("Minimal2017");
         entry.setFiles(Collections.singletonList(new LinkedFile("Example thesis", "minimal.pdf", "pdf")));
 
         // when
@@ -110,7 +108,7 @@ public class DocumentReaderTest {
     public void metaDataTest() throws IOException {
         // given
         BibEntry entry = new BibEntry();
-        entry.setCiteKey("MetaData2017");
+        entry.setCitationKey("MetaData2017");
         entry.setFiles(Collections.singletonList(new LinkedFile("Minimal", "metaData.pdf", "pdf")));
 
         // when
